# kis-trading-gateway-repo

./: README.md  pyproject.toml
.github/workflows/: api-docs-pages.yml
app/: errors.py  main.py
app/api/: routes.py
app/config/: settings.py
app/integrations/: kis_rest.py  kis_ws.py
app/schemas/: order.py  portfolio.py  quote.py  risk.py  session.py
app/services/: market_hours.py  order_queue.py  order_worker.py  quote_cache.py  quote_gateway.py  reconciliation.py  risk_policy.py  session_state.py
docs/api/: consumer-api-guide.md  openapi-next.yaml
docs/architecture/: 2026-02-28-kis-trading-next-architecture.md
docs/evidence/: 2026-02-28-api-docs-pages-verification.md  2026-02-28-buy-sell-e2e.md  2026-02-28-hardening-followup-verification.md  2026-02-28-live-readiness-cycle2-verification.md  2026-02-28-ws-debug-compare-mock-live.md  (+7 more)
env/: mock.env.example
scripts/: build_api_docs_site.py  run_mock_server.sh  ws_compare_env_modes.sh
tests/: test_api_contract_next.py  test_app_lifecycle_ws.py  test_balance_position_endpoints.py  test_kis_config.py  test_kis_rest_client.py  test_kis_ws_live_client.py  test_kis_ws_parser.py  test_kis_ws_reconnect.py  test_market_hours.py  test_mvp_iteration1.py  test_order_e2e_buy_sell.py  test_order_modify_cancel_flow.py  test_order_state_machine.py  test_order_worker_kis_adapter.py  test_quote_e2e_mock_kis.py  test_quote_gateway_service.py  test_quote_metrics_extended.py  test_reconciliation_worker.py  test_risk_policy.py  test_risk_policy_extended.py  test_runtime_portfolio_binding.py  test_smoke.py
(+11 files in other folders)
